lab06/06/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user00-workflow
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/app-root: "/"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS

spec:
  rules:
    - host: user00-workflow.169.51.203.127.nip.io
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: argo-server
                port:
                  number: 2746
